Sun Oct 18 17:26:53 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: new file. define explicit_bzero.
	* common.mk: add a rule for explicit.o.
	* configure.in: detect explicit_bzero and memset_s.
	* include/ruby/missing.h: add explicit_bzero.
	* random.c (init_randomseed): use explicit_bzero() instead of
	  memset(). memset could be eliminated by compiler optimization.

Mon Nov 30 18:46:44 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/extconf.rb: call dir_config("libedit")
	  if --enable-libedit is specified. [Bug #11751]
	  patched by John Hein

Mon Nov 30 08:44:29 2015  Eric Wong  <e@80x24.org>

	* variable.c: remove spurious #define for globals
	  [ruby-core:71735] [Feature #11749]

Sun Nov 29 09:13:03 2015  Conor Landry  <clandry94@gmail.com>

	* NEWS: [DOC] Various grammar corrections and clarifications to
	  increase readability.  [Fix GH-1115]

Sat Nov 28 19:33:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_here_document): store dispatched result of
	  on_tstring_content at the last fragment of a here document.

Fri Nov 27 19:19:44 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (connect): detect closed connection and reconnect
	  If the server closes a keep-alive http connection, the client socket
	  reaches EOF. To avoid an EOFError, detect the closed connection and
	  reconnect.
	  Added test to ensure HTTP#post succeeds even if the
	  keep-alive-connection has been closed by the server.
	  by Kristian Hanekamp <kris.hanekamp@gmail.com>
	  https://github.com/ruby/ruby/pull/1089 fix GH-1089

Thu Nov 26 21:36:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): enable tail call
	  optimization for specialized indexers.

	* compile.c (iseq_compile_each): blockiseq should be NULL, but not
	  Qnil.

Thu Nov 26 17:22:53 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c, regenc.c, regexec.c, regint.h, enc/unicode.c: